--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>{{ name }}'s Watchlist</title>
+    <title>{{ user.name }}'s Watchlist</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
 
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
          <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}">
-    <h2>{{ name }}'s Watchlist</h2>
+    <h2>{{ user.name }}'s Watchlist</h2>
     <p>{{ movies | length }} Titles</p>
     <ul>
       {% for movie in movies %}
